plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.4'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'triB'
version = '0.0.1-SNAPSHOT'
description = 'Demo project for Spring Boot'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}

}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'


	// healthcheck
	implementation "org.springframework.boot:spring-boot-starter-actuator"

	// user
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'

	implementation 'org.springframework.boot:spring-boot-starter-mail'

	// s3
	implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3:3.1.1'
	implementation 'software.amazon.awssdk:s3:2.26.24'

	// Database
	runtimeOnly 'com.mysql:mysql-connector-j'
	implementation 'com.google.cloud.sql:mysql-socket-factory-connector-j-8:+'

	// util
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	implementation 'me.paulschwarz:spring-dotenv:4.0.0'

	// API Documentation (Swagger)
	implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.13"

	// firebase
	implementation "com.google.firebase:firebase-admin:9.7.0" // 예시 버전, 최신으로 교체 가능

	// Gemini
	implementation "com.google.genai:google-genai:1.8.0"
	implementation 'org.springframework.boot:spring-boot-starter-webflux'

	//WebSocket
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	implementation 'org.springframework.security:spring-security-messaging'

	implementation 'org.springframework.session:spring-session-core'

	// Test
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}
